force-app/main/default/objects/Product_Information_On_Hand__c/Product_Information_On_Hand__c.object-meta.xml
<CustomObject>
    <label>Product on Hand Summary</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Product on Hand Summary No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product on Hand Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>