force-app/main/default/objects/Product_Information_On_Hand__c/fields/As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>As_Of_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>As Of Date</label>
    <type>Date</type>
</CustomField>