force-app/main/default/objects/Product_Information_On_Hand__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <summarizedField>Product_Information_Detail__c.Limit_Balance__c</summarizedField>
    <summaryFilterItems>
        <field>Product_Information_Detail__c.IsCredit__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Information_Detail__c.Product_Information__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>