force-app/main/default/objects/Product_Information_On_Hand__c/fields/Deposit_Ending_O_S__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Ending_O_S__c</fullName>
    <label>Deposit Ending O/S</label>
    <summarizedField>Product_Information_Detail__c.Ending_out_Ending_Balance__c</summarizedField>
    <summaryFilterItems>
        <field>Product_Information_Detail__c.IsDeposit__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Information_Detail__c.Product_Information__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>