force-app/main/default/objects/Product_Information_On_Hand__c/fields/Ending_out_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Ending_out_Ending_Balance__c</fullName>
    <label>Ending O/S</label>
    <summarizedField>Product_Information_Detail__c.Ending_out_Ending_Balance__c</summarizedField>
    <summaryForeignKey>Product_Information_Detail__c.Product_Information__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>