force-app/main/default/objects/Product_Information_On_Hand__c/fields/Limit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Limit_Balance__c</fullName>
    <label>Limit</label>
    <summarizedField>Product_Information_Detail__c.Limit_Balance__c</summarizedField>
    <summaryForeignKey>Product_Information_Detail__c.Product_Information__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>