force-app/main/default/objects/Product_Information_On_Hand__c/fields/Product_Description_link__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;  Id ,  Product_Description__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>