force-app/main/default/objects/Product_Information_On_Hand__c/fields/Product_Domain__c.field-meta.xml
<CustomField>
    <fullName>Product_Domain__c</fullName>
    <formula>TEXT( Product_Hierachy_Code__r.Product_Domain__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Domain</label>
    <type>Text</type>
</CustomField>