force-app/main/default/objects/Product_Information_On_Hand__c/fields/Product_Hierachy_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierachy_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Hierarchy Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Products_Information_On_Hand</relationshipName>
    <type>Lookup</type>
</CustomField>