force-app/main/default/objects/Product_Information_On_Hand__c/fields/Product_Info_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>Product_Info_ExternalID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Product Info ExternalID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>