force-app/main/default/objects/Product_Information_On_Hand__c/fields/Product_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>